<resources>
    <string name="app_name">suitmedia test</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="welcome">Welcome</string>
    <string name="choose_user">Choose a User</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Third Screen</string>
</resources>